fixed menu button being too right out of the screen

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
                 font-size: 0.5m;
                 color: #00FFFF;
                 float: right;
+                margin: 1%
                 }
                 
                 .menuDropdown {
